@@ -1,5 +1,6 @@
 package com.sarapis.orservice.config;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Profile;
@@ -11,13 +12,27 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
     private static final List<String> ALLOWED_ORIGINS_DEV = List.of("http://localhost:5173/");
-    private static final List<String> ALLOWED_ORIGINS_PROD = List.of("http://ec2-34-229-138-80.compute-1.amazonaws.com/");
+    private static List<String> ALLOWED_ORIGINS_PROD;
+
+    // Refer to https://www.baeldung.com/spring-inject-static-field
+    @Value("${prod.allowed_origins:#{null}}")
+    private void setAllowedOriginsProd(String rawUrls) {
+        ALLOWED_ORIGINS_PROD = Optional.ofNullable(rawUrls)
+                .map(urls -> Arrays.stream(urls.split(","))
+                        .map(String::trim)
+                        .collect(Collectors.toUnmodifiableList()))
+                .orElse(Collections.emptyList());
+    }
 
     @Bean
     @Profile("prod")
